# cs-machine-learning

./: activity-1-06-02-2023.ipynb  environment-new.yml  environment.yml  exercise-1-iris-dataset.ipynb  machinelearning_activity2.ipynb  machinelearning_activity3.ipynb  machinelearning_activity3_part_1.ipynb  machinelearning_activity3_part_2.ipynb  machinelearning_quiz2_part_1.ipynb  machinelearning_quiz2_part_2.ipynb  machinelearning_quiz2_part_2.ipynb.578f1af5134c59cc0df2001eb0d566c1.tmp  machinelearning_quiz2_part_2.ipynb.cc7d599112342bfcc22f638363bfe11d.tmp  sample.ipynb  tolentino_machinelearning_activity2.ipynb  tolentino_machinelearning_problemset2.ipynb
activities/: machinelearning_activity3.ipynb  machinelearning_activity3_ctkinter.ipynb  machinelearning_activity3_tkinter.ipynb
api/: api.py  requirements.txt
datasets/: diabetes_data_table.csv  iris.csv  spotify-survey-data-encoded.csv  (+1 more)
platform/api/: pyproject.toml
platform/api/api/: __init__.py  routes.py
platform/api/api/assets/datasets/: pbs4.csv
platform/api/api/assets/models/: heart_attack_admitted_male_model.pb  heart_attack_initial_male_model.pb  knn_glucose_insulin_model.pkl  knn_insulin_bmi_model.pkl  non_smoker_female_charges_model.pb  smoker_charge_model.pb  smoker_female_charges_model.pb  smoker_male_charges_model.pb  smoker_male_model.pb
platform/api/api/routes/: __init__.py
platform/api/api/routes/problemset_4/: __init__.py  predict.py
platform/api/api/routes/quiz_2/: __init__.py  min_max.py  part_1.py  part_2.py
platform/api/api/utils/: models.py  validation.py
(+66 files in other folders)
